--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "cookies-next": "^3.0.0",
+    "date-fns": "^2.30.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.8.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
