--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "wcag-contrast": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/wcag-contrast": "^3.0.0"
   }
 }
